--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1408,7 +1408,12 @@ Jste také připojeni k síti VPN, která může sledovat vaši aktivitu v sí
   <string name="quick_settings_rotation_locked_label">Otáčení je uzamčeno</string>
   <string name="quick_settings_rotation_locked_landscape_label">Na šířku</string>
   <string name="quick_settings_rotation_locked_portrait_label">Na výšku</string>
-  <string name="quick_settings_rotation_unlocked_label">Automatické otáčení</string>
+  <string name="quick_settings_rotation_unlocked_label">Otáčení</string>
+  <string name="data_connection_no_internet">Žádný internet</string>
+  <string name="quick_settings_night_secondary_label_on_at">Zapnuto v %s</string>
+  <string name="quick_settings_night_secondary_label_on_at_sunset">Zapnuto od západu slunce</string>
+  <string name="quick_settings_night_secondary_label_until_sunrise">Do východu slunce</string>
+  <string name="quick_settings_secondary_label_until">Do %s</string>
   <string name="quick_settings_rssi_emergency_only">Pouze tísňová volání</string>
   <string name="quick_settings_rssi_label">RSSI</string>
   <string name="quick_settings_screenbutton_label">Tlačítka</string>
