--- a/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiHome.apk/res/values-cs/strings.xml
@@ -214,7 +214,7 @@
   <string name="notification_reset_duration">Za 2 hodiny,</string>
   <string name="notification_reset_title">Uspořádání ikon dokončeno</string>
   <string name="reset_description_first_time">Můžete obnovit rozložení ikon z %1$s do 2 hodin</string>
-+  <string name="reset_description_others">Můžete obnovit rozložení ikon z %1$s</string>
+  <string name="reset_description_others">Můžete obnovit rozložení ikon z %1$s</string>
   <string name="online_wallpaper">Online</string>
   <string name="open_personal_assistant_dialog_btn_cancel">Zrušit</string>
   <string name="open_personal_assistant_dialog_btn_confirm">Deaktivovat</string>
