--- a/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiCamera.apk/res/values-cs/strings.xml
@@ -54,7 +54,7 @@
   <string name="accessibility_zoom_button">Režim přiblížení</string>
   <string name="ai_scene_mode_use_hint_text">Otevřít AI Fotoaparát, identifikovat scénu a optimalizovat nastavení pro co nejlepší záběr</string>
   <string name="audio_focus_exit_button_text">Ukončit</string>
-  <string name="beauty_fragment_tab_name_beauty">Skrášlit</string>
+  <string name="beauty_fragment_tab_name_beauty">Zkrášlit</string>
   <string name="beauty_fragment_tab_name_makeup">Rozšířené</string>
   <string name="burst_shoot_exit_button_text">Ukončit</string>
   <string name="button_fisheye_camera_title">Rybí oko</string>
