--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -208,4 +208,6 @@
   <string name="worldcolock_timezone_local">Stejný čas jako u vás</string>
   <string name="open_keep_screen">Displej zůstane zapnutý</string>
   <string name="shut_down_keep_screen">Displej se vypne</string>
+   <string name="add_clock">Přidat hodiny</string>
+  <string name="content_desc_keep_screen">\"Nezhasínat displej\" tlačítko</string>
 </resources>
