--- a/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
+++ b/Czech/main/MiuiSystemUI.apk/res/values-cs/strings.xml
@@ -1855,7 +1855,7 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="wifi_security_none">Žádné</string>
   <string name="wifi_security_passpoint">Passpoint</string>
   <string name="wifi_verbose_logging">Podrobné protokolování Wi‑Fi</string>
-  <string name="wifi_verbose_logging_summary">Zvýšit úroveň protokolování Wi‑Fi zobrazenou v SSID a RSSI při výběru sítě Wi‑Fi.</string>
+  <string name="wifi_verbose_logging_summary">Zvýšit úroveň protokolování Wi-Fi zobrazenou v SSID a RSSI při výběru sítě Wi‑Fi.</string>
   <string name="window_animation_scale_title">Měřítko animace okna</string>
   <string name="wireless_charge_dialog_cancel">Zrušit</string>
   <string name="wireless_charge_dialog_title">Mimo pozici, posuňte zařízení</string>
@@ -1874,4 +1874,37 @@ Jakýkoli uživatel může aktualizovat aplikace všech ostatních uživatelů."
   <string name="accessibility_menu_item_split_enable">Aplikace podporuje rozdělení obrazovky</string>
   <string name="accessibility_splite_screen_primary">Přidat do primární rozdělené obrazovky</string>
   <string name="accessibility_splite_screen_secondary">Přidat do sekundární rozdělené obrazovky</string>
+  <string name="miui_guide_dialog_button_negative_text">Nastavení</string>
+  <string name="miui_guide_dialog_button_positive_text">Rozumím</string>
+  <string name="miui_guide_dialog_message">Zvuky médií (hudba, videa, atd.) budou stále přehrávány v Tichém režimu. Lze změnit v Nastavení.</string>
+  <string name="miui_toast_zen_standard_to_off_when_shield_media">Zvonění, upozornění a zvuky médií budou přehrávány.</string>
+  <string name="miui_toast_zen_to_standard_when_shield_media">Zvonění, upozornění a zvuky médií budou ztišeny.</string>
+  <string name="structure_face_data_delete_fail">Nelze vymazat 3D data tváře. Zkuste to znovu.</string>
+  <string name="structure_face_data_input_down">Skloňte hlavu</string>
+  <string name="structure_face_data_input_error_away_screen">Oddalte telefon od tváře</string>
+  <string name="structure_face_data_input_error_expose_eye">Nejsou vidět vaše oči</string>
+  <string name="structure_face_data_input_error_expose_features">Některé část tváře nelze nasnímat</string>
+  <string name="structure_face_data_input_error_expose_mouth">Nejsou vidět vaše rty</string>
+  <string name="structure_face_data_input_error_keep_inface">Držte tvář v rámečku</string>
+  <string name="structure_face_data_input_error_near_screen">Přibližte telefon k tváři</string>
+  <string name="structure_face_data_input_error_open_eye">Otevřete více oči</string>
+  <string name="structure_face_data_input_error_overly_light">Příliš silné protisvětlo</string>
+  <string name="structure_face_data_input_left">Otočte hlavu doleva</string>
+  <string name="structure_face_data_input_ok">Hotovo</string>
+  <string name="structure_face_data_input_right">Otočte hlavu doprava</string>
+  <string name="structure_face_data_input_success">Hotovo!</string>
+  <string name="structure_face_data_input_up">Podávejte se nahoru</string>
+  <string name="structure_face_data_introduction_back">Zpět</string>
+  <string name="structure_face_data_introduction_msg">3D data tváře vám umožní odemknout vaše zařízení a ověřit vaši identitu. Nastavte si nejprve heslo.</string>
+  <string name="structure_face_data_introduction_next">Pokračovat</string>
+  <string name="structure_face_data_introduction_settingpassword">Nastavit</string>
+  <string name="structure_face_data_introduction_title">Přidat 3D data tváře</string>
+  <string name="structure_face_data_ir_input_face">Jemně pohněte hlavou</string>
+  <string name="structure_face_data_open_cameraing">Spouštění kamery...</string>
+  <string name="structure_face_data_rgb_input_face">Zaměřte tvář do rámečku</string>
+  <string name="structure_face_data_suggestion_text">Ujistěte se, že je vidět celá tvář. Sundejte čepici, klobouk a sluneční brýle.</string>
+  <string name="structure_face_data_suggestion_warning_text">Poznámka: Používání 3D dat tváře je méně bezpečné oproti heslu. Zařízení mohou odemknout i osoby, které se vám podobají.</string>
+  <string name="structure_face_delete_data_dialog_msg">Nelze spustit kameru. Zkuste to znovu.</string>
+  <string name="structure_face_delete_data_dialog_msg_retry">Zkusit znovu</string>
+  <string name="structure_face_delete_data_dialog_title">Nelze spustit kameru</string>
 </resources>
