--- a/Czech/main/CloudService.apk/res/values-cs/strings.xml
+++ b/Czech/main/CloudService.apk/res/values-cs/strings.xml
@@ -603,4 +603,8 @@ Odeslané ID vašeho zařízení na server Mi bude zašifrováno."</string>
   <string name="xiaomi_cloud_service">MiCloud</string>
   <string name="xiaomi_cloud_service_subtitle">Všechny důležité položky na jednom místě</string>
   <string name="xmpp_server_addr"/>
+  <string name="member_menu_vipname_free">Zdarma</string>
+ <string name="member_menu_vipname_mega">Mega</string>
+  <string name="member_menu_vipname_premium">Premium</string>
+  <string name="member_menu_vipname_ultra">Ultra</string>
 </resources>
