--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -7,7 +7,7 @@
   <string name="alarm_alert_snooze_set">Odložit o %d min.</string>
   <string name="alarm_ascending_mode_summary">Hlasitost budíku postupně vzrůstá až do max. výše nastavené hlasitosti.</string>
   <string name="alarm_ascending_mode_title">Vzrůstající hlasitost</string>
-  <string name="alarm_clock_more_setting">Další nastavená</string>
+  <string name="alarm_clock_more_setting">Další nastavení</string>
   <string name="alarm_disabled">Vypnuto</string>
   <string name="alarm_in_silent_mode_title">Budík v tichém režimu</string>
   <string name="alarm_klaxon_service_desc">Služba přehrávání zvuku budíků nastavených v aplikaci Hodiny.</string>
