--- a/Czech/main/Contacts.apk/res/values-cs/strings.xml
+++ b/Czech/main/Contacts.apk/res/values-cs/strings.xml
@@ -1313,5 +1313,7 @@ Vyberte si z následujících možností:</string>
   <string name="yellowpage_user_profile">Profil</string>
   <string name="yesterday">Včera</string>
   <string name="zero_items_selected">Nic není vybráno</string>
-  <string name="preference_show_firewall_calllog">Zobrazit blokované hovory v seznamu hovorů</string>
+  <string name="preference_show_firewall_calllog">Zobrazit blokované hovory v seznamu hovorů</string>  
+  <string name="toast_call_no_SoundRecorder">Nahrávání není dostupné</string>
+    <string name="toast_call_no_notes">Poznámky nejsou dostupné</string>
 </resources>
