--- a/Czech/main/DeskClock.apk/res/values-cs/strings.xml
+++ b/Czech/main/DeskClock.apk/res/values-cs/strings.xml
@@ -210,4 +210,6 @@
   <string name="shut_down_keep_screen">Displej se vypne</string>
    <string name="add_clock">Přidat hodiny</string>
   <string name="content_desc_keep_screen">\"Nezhasínat displej\" tlačítko</string>
+  <string name="timer_cancel_hint">Zastavit</string>
+  <string name="timer_end_time">Časovač skončí za %s</string>
 </resources>
